[package]
name = "ppgen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple passphrase generator"
repository = "https://github.com/markhakansson/ppgen"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["passphrase", "pass", "password", "cli"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
